FebeTest/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: febe
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - path: /graphiql
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 80
